--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-offline": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-styled-components": "^5.0.0",
+    "gatsby-plugin-webfonts": "^2.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
