--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "gatsby-plugin-styled-components": "^5.0.0",
     "gatsby-plugin-webfonts": "^2.1.1",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-beforeunload": "^2.5.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
+    "react-responsive": "^9.0.0-beta.4",
     "styled-components": "^5.3.3"
   }
 }
