--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.15",
     "babel-plugin-styled-components": "^1.13.3",
     "dexie": "^3.0.3",
     "gatsby": "^4.0.0",
@@ -32,5 +33,10 @@
     "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.4",
     "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-beforeunload": "^2.1.1",
+    "@types/react-helmet": "^6.1.4"
   }
 }
