--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.4",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "styled-icons": "^10.45.0"
   },
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.2",
