--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-styled-components": "^1.13.3",
     "dexie": "^3.0.3",
     "gatsby": "^4.0.0",
+    "gatsby-plugin-layout": "^3.1.0",
     "gatsby-plugin-manifest": "^4.0.0",
     "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-offline": "^5.0.0",
