--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/styled-components": "^5.1.15",
     "babel-plugin-styled-components": "^1.13.3",
     "dexie": "^3.0.3",
+    "framer-motion": "^5.3.1",
     "gatsby": "^4.0.0",
     "gatsby-plugin-layout": "^3.1.0",
     "gatsby-plugin-manifest": "^4.0.0",
